Fix horizontal overflow of work and project divs

--- a/sass/_global.scss
+++ b/sass/_global.scss
@@ -11,9 +11,9 @@ body {
      position: relative;
 }
 
-/* section{
+section{
      min-width: 300px;
-} */
+}
 
 html {
      scroll-behavior: smooth;
